Kotlin script: code cleaning